<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Calculadora</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut sapien imperdiet, mattis nibh sed, mattis est. Donec ullamcorper arcu nec dictum mollis. Maecenas tincidunt cursus velit non rutrum. Integer ornare purus arcu, id ultrices ex dignissim vitae. Phasellus nisl ex, vulputate nec pulvinar sit amet, lobortis eu mi. Nulla tristique diam eget lorem hendrerit, in tempus sapien rutrum. Nulla facilisi. Integer laoreet, nisl in cursus euismod, turpis odio lacinia velit, id maximus neque diam pretium augue. Nunc commodo nulla ante, eu dictum ante sollicitudin lobortis. Mauris a sodales nulla. Pellentesque blandit augue vitae libero vulputate ultrices.  Pellentesque hendrerit, turpis non iaculis dapibus, nibh odio congue sem, id rhoncus ex sem ac nisi. Praesent consectetur, velit eu tristique varius, lorem nisl aliquam risus, vel placerat velit enim bibendum massa. Ut ante eros, porta eget ornare quis, lacinia a risus. Nunc ut lobortis urna. Mauris in fermentum dui, et faucibus est. Vestibulum molestie ultricies malesuada. Proin pharetra erat eget leo auctor accumsan. Curabitur eget malesuada neque. Pellentesque rhoncus ut dolor at hendrerit.  Cras bibendum, lectus nec ornare accumsan, risus risus mattis neque, vel volutpat urna nisl vitae ante. Proin et porta eros. Aliquam non tincidunt sapien. Quisque blandit, dolor id tincidunt fringilla, ligula elit molestie purus, sed finibus elit purus nec neque. Sed tempus vitae risus sit amet interdum. Morbi luctus eros nec auctor pretium. Proin blandit lectus ac purus tempor, a sodales arcu ultricies. Sed iaculis posuere aliquam. Quisque non tellus vitae libero vulputate malesuada. In rutrum tristique tempus. Sed vel tempus felis. Ut rutrum enim at justo consectetur egestas. Nullam mattis sapien non libero iaculis, at pharetra massa ornare.  Curabitur maximus ullamcorper magna, tristique iaculis tellus auctor in. Curabitur vel rhoncus sapien. Morbi iaculis ultricies molestie. Mauris pretium orci in ante tincidunt, ac convallis diam congue. Ut tincidunt cursus sodales. Maecenas ut convallis augue. Suspendisse tempor, nisl ac efficitur commodo, est orci mattis lorem, a egestas diam purus nec purus. Curabitur dapibus sagittis ligula.  Vestibulum erat libero, aliquam vel pretium non, tempus ac arcu. Maecenas nisi arcu, egestas vitae viverra non, dictum luctus ante. Fusce sit amet imperdiet tortor. Ut sollicitudin ligula urna, eget rhoncus diam faucibus non. Proin at sagittis nibh. Aenean elit lorem, ullamcorper sed euismod nec, tempor at eros. Donec sodales ac sem at tincidunt. Etiam placerat bibendum metus, nec lacinia orci pulvinar quis. Sed orci orci, rhoncus quis feugiat ac, auctor eu augue. Suspendisse porttitor finibus ex, quis tincidunt dui ultrices ut. Vivamus condimentum risus libero, et vehicula purus faucibus eget.</string>

</resources>
