<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:id="@+id/button"
            android:onClick="suma"
            android:layout_weight="2"
            android:background="#000"
            android:textColor="#fff"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:id="@+id/button2"
            android:onClick="restar"
            android:layout_weight="2"
            android:background="#000"
            android:textColor="#fff"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:background="#000"
            android:textColor="#fff"
            android:onClick="multiplicar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dividir"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:background="#000"
            android:textColor="#fff"
            android:onClick="dividir" />
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de"
        android:id="@+id/button6"
        android:layout_marginTop="25dp"
        android:background="#fff"
        android:onClick="newActivity"
        android:padding="10dp" />

</LinearLayout>